Updated player movement and first iteration of light mask

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Exiled Inventor</title>
-  <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
-  <body style = "display: block; position: relative; background: red; margin-left: 100px; margin-top: 50px;"></body>
-  <script src="src/base.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>The Exiled Inventor</title>
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
+    <body style="display: block; position: relative; background: black; margin-left: 100px; margin-top: 50px;"></body>
+    <script src="src/base.js"></script>
+  </body>
 </html>
